--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "mikehaertl/php-pdftk": "^0.13.1"
+        "mikehaertl/php-pdftk": "^0.13.1",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.6"
     }
 }
